--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 
-{# Page header block, probably styled in base template #}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -11,28 +10,22 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div> {# Optional visual effect layer #}
-
+    <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Products</h2>
-
-                {# Category filter badges #}
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
-
                 <hr class="w-50 mb-1">
             </div>
         </div>
-
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
-                    {# Sorting dropdown #}
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
                             <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
@@ -48,8 +41,6 @@
                             </select>
                         </div>
                     </div>
-
-                    {# Filter/search results summary #}
                     <div class="col-12 col-md-6 order-md-first">
                         <p class="text-muted mt-3 text-center text-md-left">
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
@@ -59,14 +50,10 @@
                         </p>
                     </div>
                 </div>
-
-                {# Product cards #}
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
-
-                                {# Product image or placeholder #}
                                 {% if product.image %}
                                 <a href="{% url 'product_detail' product.id %}">
                                     <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -76,17 +63,13 @@
                                     <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
-
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.name }}</p>
                                 </div>
-
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
                                             <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-
-                                            {# Category info #}
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -94,8 +77,6 @@
                                                 </a>
                                             </p>
                                             {% endif %}
-
-                                            {# Rating #}
                                             {% if product.rating %}
                                                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                                             {% else %}
@@ -106,13 +87,11 @@
                                 </div>
                             </div>
                         </div>
-
-                        {# Responsive <hr> elements for layout separation #}
                         {% if forloop.counter|divisibleby:1 %}
                             <div class="col-12 d-sm-none mb-5">
                                 <hr>
                             </div>
-                        {% endif %}
+                        {% endif %}                        
                         {% if forloop.counter|divisibleby:2 %}
                             <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
                                 <hr>
@@ -128,7 +107,6 @@
                                 <hr>
                             </div>
                         {% endif %}
-
                     {% endfor %}
                 </div>
             </div>
@@ -140,6 +118,7 @@
         </a>	
     </div>
 {% endblock %}
+
 {% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
