--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,10 +1,14 @@
+{# Extends the base template layout #}
 {% extends "base.html" %}
+{# Loads the static files template tag library #}
 {% load static %}
 
+{# Block for including extra CSS specific to the checkout page #}
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{# Header section of the page (minimal here, just layout setup) #}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -13,27 +17,36 @@
     </div>
 {% endblock %}
 
+{# Main content block #}
 {% block content %}
     <div class="overlay"></div>
+
     <div class="container">
         <div class="row">
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">Thank You</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <p class="text-black">
+                    Your order information is below. A confirmation email will be sent to
+                    <strong>{{ order.email }}</strong>.
+                </p>
             </div>
         </div>
 
+        {# Order information section #}
         <div class="row">
             <div class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border">
+
+                    {# Order info heading #}
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Info:</small>
                         </div>
                     </div>
 
+                    {# Order Number #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -43,6 +56,7 @@
                         </div>
                     </div>
 
+                    {# Order Date #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Date</p>
@@ -51,20 +65,22 @@
                             <p class="mb-0">{{ order.date }}</p>
                         </div>
                     </div>
-                    
+
+                    {# Order Details heading #}
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Details:</small>
                         </div>
                     </div>
 
+                    {# Loop through each line item in the order #}
                     {% for item in order.lineitems.all %}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="small mb-0 text-black font-weight-bold">
-                                <!-- item.product_size|upper at the end of the line below is a correction, 
-                                  in the video code, Chris has item.product.size|upper which caused the size to not render -->
-                                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper}}{% endif %}
+                                {{ item.product.name }}
+                                {# Show size if applicable #}
+                                {% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
@@ -73,12 +89,14 @@
                     </div>
                     {% endfor %}
 
+                    {# Delivery address section #}
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Delivering To:</small>
                         </div>
                     </div>
 
+                    {# Full Name #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Full Name</p>
@@ -87,7 +105,8 @@
                             <p class="mb-0">{{ order.full_name }}</p>
                         </div>
                     </div>
-                    
+
+                    {# Address Line 1 #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Address 1</p>
@@ -97,20 +116,19 @@
                         </div>
                     </div>
 
+                    {# Address Line 2 (optional) #}
                     {% if order.street_address2 %}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Address 2</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <!-- order.street_address2 in the code below is a correction. 
-                             In the video, Chris copy/pastes order.street_address1 
-                             but does not update it to order.street_address2 -->
                             <p class="mb-0">{{ order.street_address2 }}</p>
                         </div>
                     </div>
                     {% endif %}
 
+                    {# County (optional) #}
                     {% if order.county %}
                     <div class="row">
                         <div class="col-12 col-md-4">
@@ -122,6 +140,7 @@
                     </div>
                     {% endif %}
 
+                    {# Town/City #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Town or City</p>
@@ -131,6 +150,7 @@
                         </div>
                     </div>
 
+                    {# Postcode (optional) #}
                     {% if order.postcode %}
                     <div class="row">
                         <div class="col-12 col-md-4">
@@ -142,6 +162,7 @@
                     </div>
                     {% endif %}
 
+                    {# Country #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Country</p>
@@ -151,6 +172,7 @@
                         </div>
                     </div>
 
+                    {# Phone number #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Phone Number</p>
@@ -160,12 +182,14 @@
                         </div>
                     </div>
 
+                    {# Billing information #}
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Billing Info:</small>
                         </div>
                     </div>
 
+                    {# Order total #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Total</p>
@@ -175,6 +199,7 @@
                         </div>
                     </div>
 
+                    {# Delivery cost #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Delivery</p>
@@ -184,6 +209,7 @@
                         </div>
                     </div>
 
+                    {# Grand total #}
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Grand Total</p>
@@ -195,17 +221,25 @@
                 </div>
             </div>
         </div>
+
+        {# CTA button: returns user to profile or product deals depending on context #}
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
-                {% if from_profile %}
+				{% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span class="text-uppercase">Back to Profile</span>
+                    </a>
                 {% else %}
-                
-				<a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-					<span class="icon mr-2">
-						<i class="fas fa-gifts"></i>
-					</span>
-					<span class="text-uppercase">Now check out the latest deals!</span>
-				</a>
+                    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-gifts"></i>
+                        </span>
+                        <span class="text-uppercase">Now check out the latest deals!</span>
+                    </a>
+                {% endif %}
 			</div>
 		</div>
     </div>
